force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeSimuladosEmergenciaPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeSimuladosEmergenciaPeriodo__c</fullName>
    <inlineHelpText>All evidence must be attached</inlineHelpText>
    <label>Qty of Simulated Emergency in the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>