force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeTreinamentoPlanejadoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeTreinamentoPlanejadoPeriodo__c</fullName>
    <label>Qty of Trainings Planned for the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>