force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeTreinamentoRealizadoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeTreinamentoRealizadoPeriodo__c</fullName>
    <label>Qty of Training Conducted Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>