force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QualquerFuncionario__c.field-meta.xml
<CustomField>
    <fullName>TCF_QualquerFuncionario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Employee</label>
    <type>Checkbox</type>
</CustomField>