force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_RatingItem5_2__c.field-meta.xml
<CustomField>
    <fullName>TCF_RatingItem5_2__c</fullName>
    <label>Rating Item 5.2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TGP_RatingMonitoring</valueSetName>
    </valueSet>
</CustomField>