force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_RatingSection12__c.field-meta.xml
<CustomField>
    <fullName>TCF_RatingSection12__c</fullName>
    <label>Rating Section 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TGP_RatingMonitoring</valueSetName>
    </valueSet>
</CustomField>