force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ResponsavelHSE__c.field-meta.xml
<CustomField>
    <fullName>TCF_ResponsavelHSE__c</fullName>
    <inlineHelpText>Name of the person responsible for the HSEQ and for filling in the information</inlineHelpText>
    <label>HSEQ Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>