force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Resposta111__c.field-meta.xml
<CustomField>
    <fullName>TCF_Resposta111__c</fullName>
    <label>Answer 11.1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>