force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SafetyCultureSection10__c.field-meta.xml
<CustomField>
    <fullName>TCF_SafetyCultureSection10__c</fullName>
    <formula>CASE( TCF_RatingSection10__c ,
					&quot;10&quot;, IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;Construtivo&quot;,&quot;Generative&quot;),
					&quot;6&quot;, IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;Proativo&quot;,&quot;Proactive&quot;),
					&quot;3&quot;, IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;Calculativo&quot;,&quot;Calculative&quot;),
					&quot;0&quot;, IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;Patológico/Reativo&quot;,&quot;Pathological/Reative&quot;),
					&quot;&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Culture Section 10</label>
    <type>Text</type>
</CustomField>