force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SaudeOcupacional__c.field-meta.xml
<CustomField>
    <fullName>TCF_SaudeOcupacional__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingItem5_2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5.2 SAÚDE OCUPACIONAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>