force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SaudeOcupacionalText__c.field-meta.xml
<CustomField>
    <fullName>TCF_SaudeOcupacionalText__c</fullName>
    <formula>TCF_SafetyCultureSection4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saúde Ocupacional</label>
    <type>Text</type>
</CustomField>