force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SistemaGestaoNPossuiAlertas__c.field-meta.xml
<CustomField>
    <fullName>TCF_SistemaGestaoNPossuiAlertas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management system does not have Alerts</label>
    <type>Checkbox</type>
</CustomField>