force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SistemaGestaoNPossuiCampanhas__c.field-meta.xml
<CustomField>
    <fullName>TCF_SistemaGestaoNPossuiCampanhas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management system does not have campaign</label>
    <type>Checkbox</type>
</CustomField>