force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SistemaGestaoNPossuiDDSDSS__c.field-meta.xml
<CustomField>
    <fullName>TCF_SistemaGestaoNPossuiDDSDSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management system does not have DDS/DSS</label>
    <type>Checkbox</type>
</CustomField>