force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SistemaGestaoNPossuiDesviosHSE__c.field-meta.xml
<CustomField>
    <fullName>TCF_SistemaGestaoNPossuiDesviosHSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management system has no HSE deviations</label>
    <type>Checkbox</type>
</CustomField>