force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SistemaGestaoNPossuiReunioes__c.field-meta.xml
<CustomField>
    <fullName>TCF_SistemaGestaoNPossuiReunioes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management system does not have Meetings</label>
    <type>Checkbox</type>
</CustomField>