force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Status__c.field-meta.xml
<CustomField>
    <fullName>TCF_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting Evaluation</fullName>
                <default>true</default>
                <label>Waiting Evaluation</label>
            </value>
            <value>
                <fullName>Waiting Modec Evaluation</fullName>
            </value>
            <value>
                <fullName>Pending Supplier</fullName>
            </value>
            <value>
                <fullName>Rejectd</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>