force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_StepAberta__c.field-meta.xml
<CustomField>
    <fullName>TCF_StepAberta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Step</label>
    <type>Checkbox</type>
</CustomField>