force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_SupervisorsOnly__c.field-meta.xml
<CustomField>
    <fullName>TCF_SupervisorsOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisors Only</label>
    <type>Checkbox</type>
</CustomField>