force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TaxaFrequencia__c.field-meta.xml
<CustomField>
    <fullName>TCF_TaxaFrequencia__c</fullName>
    <label>Frequency rate:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>