force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TaxaGravidade__c.field-meta.xml
<CustomField>
    <fullName>TCF_TaxaGravidade__c</fullName>
    <label>Severity rate:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>