force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TecnicoSegurancaTrabalho__c.field-meta.xml
<CustomField>
    <fullName>TCF_TecnicoSegurancaTrabalho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Technician</label>
    <type>Checkbox</type>
</CustomField>