force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Telefone__c.field-meta.xml
<CustomField>
    <fullName>TCF_Telefone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>