force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TreinamentoCapacitacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_TreinamentoCapacitacao__c</fullName>
    <formula>TCF_SafetyCultureItem5_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treinamento e Capacitação</label>
    <type>Text</type>
</CustomField>