force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TreinamentoCapactacao__c.field-meta.xml
<CustomField>
    <fullName>TCF_TreinamentoCapactacao__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingItem5_1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5.1 TREINAMENTO E CAPACITAÇÃO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>