force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_TurnoverGeral__c.field-meta.xml
<CustomField>
    <fullName>TCF_TurnoverGeral__c</fullName>
    <formula>(( TCF_NFuncionariosAdmitidos__c +  TCF_NFuncionariosDemitidos__c ) / 2)/ TCF_NTotalFuncionarios__c</formula>
    <label>General Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>