force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_UnhealthyReport__c.field-meta.xml
<CustomField>
    <fullName>TCF_UnhealthyReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unhealthy Report</label>
    <type>Checkbox</type>
</CustomField>