force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/recordTypes/TRT_Answered.recordType-meta.xml
<RecordType>
    <fullName>TRT_Answered</fullName>
    <active>true</active>
    <label>Answered</label>
</RecordType>