force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/recordTypes/TRT_Initial.recordType-meta.xml
<RecordType>
    <fullName>TRT_Initial</fullName>
    <active>true</active>
    <label>Initial</label>
</RecordType>