force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/recordTypes/TRT_Rated.recordType-meta.xml
<RecordType>
    <fullName>TRT_Rated</fullName>
    <active>true</active>
    <label>Rated</label>
</RecordType>