force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/validationRules/CheckGerenteHSEQ.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckGerenteHSEQ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				TCF_GerenteHSEQ__c = true,
				OR(
								ISBLANK(TCF_NomeGerenteHSEQ__c),
								ISNULL(TCF_NomeGerenteHSEQ__c),
								ISBLANK(TCF_PrincipaisRespGerenteHSEQ__c ),
								ISNULL(TCF_PrincipaisRespGerenteHSEQ__c )
				)
)</errorConditionFormula>
    <errorDisplayField>TCF_GerenteHSEQ__c</errorDisplayField>
    <errorMessage>If the HSEQ Manager field is completed, the HSEQ Manager Name and Main Responsibilities Manager HSEQ fields must also be completed.</errorMessage>
</ValidationRule>