force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/validationRules/Item44.validationRule-meta.xml
<ValidationRule>
    <fullName>Item44</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				TCF_SupervisorsOnly__c = true,
				TCF_QualquerFuncionario__c = true
				)</errorConditionFormula>
    <errorDisplayField>TCF_SupervisorsOnly__c</errorDisplayField>
    <errorMessage>Fill only one of the options</errorMessage>
</ValidationRule>