force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/listViews/AguaradandoAvaliacao.listView-meta.xml
<ListView>
    <fullName>AguaradandoAvaliacao</fullName>
    <columns>NAME</columns>
    <columns>TCF_Status__c</columns>
    <columns>TCF_GeneralRating__c</columns>
    <columns>TCF_GeneralSafetyCulture__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TOBJ_AvaliacaoHSE__c.TRT_Answered</value>
    </filters>
    <label>Aguardando Avaliação</label>
</ListView>