force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/listViews/Completed_List.listView-meta.xml
<ListView>
    <fullName>Completed_List</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TCF_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>