force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/listViews/My_Evaluations.listView-meta.xml
<ListView>
    <fullName>My_Evaluations</fullName>
    <columns>NAME</columns>
    <columns>TCF_Status__c</columns>
    <columns>TCF_GeneralRating__c</columns>
    <columns>TCF_GeneralSafetyCulture__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Evaluations</label>
</ListView>