force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/listViews/TLV_PendingEvaluations.listView-meta.xml
<ListView>
    <fullName>TLV_PendingEvaluations</fullName>
    <columns>NAME</columns>
    <columns>TCF_Status__c</columns>
    <columns>TCF_GeneralRating__c</columns>
    <columns>TCF_GeneralSafetyCulture__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TOBJ_AvaliacaoHSE__c.TRT_Initial</value>
    </filters>
    <label>Pending Evaluations</label>
</ListView>